--- a/frontend/css/cats/List.css
+++ b/frontend/css/cats/List.css
@@ -1,5 +1,14 @@
 container {
     flex-grow: 1;
+    justify-content: center;
+    align-items: center;
+}
+
+scroll {
+    flex-grow: 1;
+    align-self: stretch;
+    height: 0; /* Gambiarra para funcionar na web. */
+    padding: 0 10px 10px 10px;
 }
 
 fab {
@@ -8,13 +17,24 @@ fab {
     bottom: 25px;
 }
 
-scroll {
-    height: 0; /* Gambiarra para funcionar no Chrome. */
-    flex-grow: 1;
+itemTouch {
+    margin-top: 10px;
 }
 
-item {
+itemSurface {
+    flex-direction: row;
+    align-items: center;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+itemImage {
+    flex-grow: 0;
+    width: 50px;
     height: 50px;
-    margin: 10px;
-    background-color: #00ff00;
+    margin-right: 10px;
+}
+
+itemView {
+    flex-grow: 1;
 }
