--- a/frontend/css/cats/List.css
+++ b/frontend/css/cats/List.css
@@ -4,10 +4,13 @@ container {
     align-items: center;
 }
 
-scroll {
+outerScroll {
     flex-grow: 1;
     align-self: stretch;
     height: 0; /* Gambiarra para funcionar na web. */
+}
+
+innerScroll {
     padding: 0 10px 10px 10px;
 }
 
